modules/402-ingress-nginx/template_tests/testdata/golden/lb/controller/secret.yaml
apiVersion: v1
data:
  client.crt: dGVzdHN0cmluZw==
  client.key: dGVzdHN0cmluZw==
kind: Secret
metadata:
  labels:
    heritage: deckhouse
    module: ingress-nginx
  name: ingress-nginx-test-auth-tls
  namespace: d8-ingress-nginx
