modules/402-ingress-nginx/template_tests/testdata/golden/lb/controller/service-admission.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: controller
    heritage: deckhouse
    module: ingress-nginx
    name: test
  name: test-admission
  namespace: d8-ingress-nginx
spec:
  ports:
  - name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app: controller
    name: test
  type: ClusterIP
