modules/402-ingress-nginx/template_tests/testdata/golden/lb/controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    my: annotation
    second: "true"
  labels:
    app: controller
    deckhouse-service-type: provider-managed
    heritage: deckhouse
    module: ingress-nginx
    name: test
  name: test-load-balancer
  namespace: d8-ingress-nginx
spec:
  externalTrafficPolicy: Local
  loadBalancerSourceRanges:
  - 1.1.1.1
  - 2.2.2.2
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: controller
    name: test
  type: LoadBalancer
